Přidání publikace k REPowerEU
Tento PR přidává publikaci ke studii RePowerEU. Tato stránka využívá
nový layout pro vlastní publikace.

--- a/_data/lang.yml
+++ b/_data/lang.yml
@@ -74,6 +74,10 @@ text:
     next: "Další díl >>"
   figure:
     source: "Zdroj:"
+  publication:
+    publication: "Publikace Fakta o klimatu"
+    download: "Celý text publikace v PDF"
+    sponsor: "Zadavatel"
 
 sidebar:
   download:
