Dvousloupcový layout pro desktop a další úpravy
Tento commit přidává publikaci perex, strukturovanější info o autorství
a layout na dva sloupce pro desktop. Současně dává publikaci do sekce
energetika.

--- a/_data/lang.yml
+++ b/_data/lang.yml
@@ -75,7 +75,7 @@ text:
   figure:
     source: "Zdroj:"
   publication:
-    publication: "Publikace Fakta o klimatu"
+    publication: "Naše publikace"
     download: "Celý text publikace v PDF"
     sponsor: "Zadavatel"
 
