Více formální jméno pro Jirku (pro autorství)

--- a/_data/organization-members.yml
+++ b/_data/organization-members.yml
@@ -41,6 +41,7 @@
 
   - id: "jirka-lnenicka"
     name: "Jirka Lněnička"
+    name_formal: "Jiří Lněnička"
     position: "Editor"
     summary: "Pomáhá týmu přemýšlet nad texty a ladit jejich finální podobu. Opírá se o 20 let zkušeností z pedagogické, překladatelské a editorské činnosti pro firmy, akademická pracoviště a další organizace."
     img: "jirka-lnenicka.jpg"
