Přidání telefonu do YAML týmu (Ondráš)

--- a/_data/organization-members.yml
+++ b/_data/organization-members.yml
@@ -8,6 +8,7 @@
     summary: "Teoretický fyzik, který se léta zabýval komunikací a navigací v komplexních systémech. Vede náš tým a přednáší o tématu klimatických změn na univerzitách i ve firmách. Věnuje se zejména fyzikální podstatě problému a strategii transformace v kontextu ČR i Evropy."
     img: "ondras-pribyla.jpg"
     email: "ondras.pribyla@faktaoklimatu.cz"
+    phone: "+420 775 988 882"
     linkedin: "https://www.linkedin.com/in/ondr%C3%A1%C5%A1-p%C5%99ibyla-b4b90022/"
     twitter: "https://twitter.com/OPribyla"
 
@@ -87,7 +88,7 @@
     img: "adam-bilek.jpg"
     email: "adam.bilek@faktaoklimatu.cz"
     linkedin: "https://www.linkedin.com/in/adam-b-1467861bb/"
-  
+
   - name: "Tom Protivínský"
     position: "Analytik"
     summary: "Věnuje se datovým analýzám a ekonomickým aspektům, například tématům zpoplatnění uhlíku a nákladům mitigace klimatických změn. Kromě toho pracuje pro ekonomický think-tank [IDEA](https://idea.cerge-ei.cz/)."
