Přidání dalších rolí k publikaci REPowerEU

--- a/_data/organization-members.yml
+++ b/_data/organization-members.yml
@@ -15,6 +15,7 @@
 
   - id: "kristi-psorn-zakopcanova"
     name: "Kristi Pšorn Zákopčanová"
+    name_formal: "Kristína Pšorn Zákopčanová"
     position: "Vizualizační guru"
     summary: "Její práci vidíte na většině našich infografik – zabývá se analýzou a vizuální komunikací dat a informací. Pracuje také v datovém týmu iRozhlasu a konzultuje pro PAQ Research. Za svou práci [dostala](https://www.irozhlas.cz/zivotni-styl/novinarska-cena-2021-irozhlas-inovativni-zurnalistika-seznam_2206241001_sam) _Cenu za inovativní online žurnalistiku_."
     img: "kristi-zakopcanova.jpg"
