První verze medailonku Marcel

--- a/_data/organization-members.yml
+++ b/_data/organization-members.yml
@@ -67,6 +67,13 @@
     linkedin: "https://www.linkedin.com/in/milan-v%C3%ADtek-151b456b/"
     twitter: "https://twitter.com/vitekmilan"
 
+  - name: "Marcel Otruba"
+    position: "Designer"
+    summary: "TODO"
+    img: "marcel-otruba.jpg"
+    email: "marcel.otruba@faktaoklimatu.cz"
+    linkedin: "https://www.linkedin.com/in/marcel-otruba-778a32203/"
+
   - name: "Martin Ukrop"
     position: "Administrátor a programátor"
     summary: "Expert počítačové bezpečnosti a lektor zážitkové pedagogiky, který se profesionálně věnuje propojování akademiků a lidí z průmyslu. Spravuje IT systémy Fakt o klimatu a podílí se na tvorbě webu."
