Úpravy autorů u všech explainerů

--- a/_data/organization-members.yml
+++ b/_data/organization-members.yml
@@ -113,6 +113,7 @@
 
   - id: "tom-protivinsky"
     name: "Tom Protivínský"
+    name_formal: "Tomáš Protivínský"
     position: "Analytik"
     summary: "Věnuje se datovým analýzám a ekonomickým aspektům, například tématům zpoplatnění uhlíku a nákladům mitigace klimatických změn. Kromě toho pracuje pro ekonomický think-tank [IDEA](https://idea.cerge-ei.cz/)."
     img: "tomas-protivinsky.jpg"
