--- a/_data/lang.yml
+++ b/_data/lang.yml
@@ -54,6 +54,7 @@ text:
   episode:
     episode: "Podcast 2050"
   explainer:
+    explainer: "Článek"
     series: "Díl série"
     source: "Zdroj"
     author: "Autor"
