Aktualizace jazyka ohledně plynové krize
Tento commit taky přidává deklaraci v záhlaví stránky, že text byl
aktualizován.

--- a/_data/lang.yml
+++ b/_data/lang.yml
@@ -59,6 +59,7 @@ text:
     source: "Zdroj"
     author: "Autor"
     licence: "Licence"
+    updated: "aktualizováno"
   related:
     title: "Související infografiky a studie"
     caption: "Zaujala vás naše práce? Prozkoumejte další související infografiky a studie:"
