--- a/_data/lang.yml
+++ b/_data/lang.yml
@@ -34,6 +34,11 @@ topic:
   nutshell-id: "v-kostce"
   nutshell-title: "V kostce"
   series-prefix: "Série: "
+  region:
+    cz: "ČR"
+    sk: "SR"
+    eu: "EU"
+    world: "svět"
 
 text:
   toc: "Obsah"
