--- a/_data/organization-members.yml
+++ b/_data/organization-members.yml
@@ -154,7 +154,7 @@
   
   - id: "kristyna-simonova"
     name: "Kristýna Šimonová"
-    summary: "Spolupracuje na materiálech týkajících se globálních úmluv v oblasti biodiverzity a zabývá se klimatickými ambicemi států jihovýchodní Asie."
+    summary: "Spolupracuje na materiálech týkajících se globálních úmluv v oblasti biodiverzity a zabývá se klimatickými ambicemi států východní Asie."
 
   - name: "Eliška Vlčková"
     summary: "Spolupracovala na řadě materiálů týkajících se krajiny, biodiverzity či ochrany životního prostředí. Zpracovává prostorová data a tvoří kartografické výstupy."
