Úprava Andy a Hanky, změna pořadí

--- a/_data/organization-members.yml
+++ b/_data/organization-members.yml
@@ -68,16 +68,22 @@
     linkedin: "https://www.linkedin.com/in/marcel-otruba-778a32203/"
     www: "https://otruba.sk/"
 
-  - id: "hana-tesak-vrtala"
-    name: "Hana Tesák Vrtala"
-    position: "Podcasterka a analytička"
-    summary: "Věnuje se komunikaci vědy a pedagogickému vzdělávání budoucích učitelů přírodních věd. Ve Faktech o klimatu se specializuje na téma transformace dopravy a spoluvytváří podcast [2050](https://2050podcast.cz/)."
-    img: "hana-vrtalova.jpg"
-    email: "hana.vrtalova@faktaoklimatu.cz"
-    linkedin: "https://www.linkedin.com/in/hana-vrtalová/"
-    twitter: "https://twitter.com/HVrtalova"
+ - id: "matej-grabovsky"
+    name: "Matěj Grabovský"
+    position: "Analytik a programátor"
+    summary: "Tvoří statistické modely a simulace procesů spjatých se změnami klimatu a transformací. Zpracovává a analyzuje data v širokém spektru oblastí. Jako softwarový inženýr pracuje na webových aplikacích a distribuovaných systémech."
+    img: "matej-grabovsky.jpg"
+    email: "matej.grabovsky@faktaoklimatu.cz"
+    www: "https://mgrabovsky.net/"
 
-  - id: "milan-vitek"
+- id: "andy-snovakova"
+    name: "Andy Snováková"
+    position: "Analytička"
+    summary: "Věnuje se tématu uhlíku v půdě a jeho vztahu ke klimatické změně a pomáhá s vizualizací dat. Vystudovala evoluční a ekologickou biochemii se zaměřením na botaniku a dále pokračuje v environmentálních studiích."
+    img: "andy-snovakova.jpg"
+    email: "alexandra.snovakova@faktaoklimatu.cz"
+
+- id: "milan-vitek"
     name: "Milan Vítek"
     position: "Správce sociálních sítí"
     summary: "Stará se o sociální sítě Fakt o klimatu. Kromě toho se zabývá tématem vlivu změny klimatu na extrémy počasí."
@@ -86,13 +92,22 @@
     linkedin: "https://www.linkedin.com/in/milan-v%C3%ADtek-151b456b/"
     twitter: "https://twitter.com/vitekmilan"
 
-  - id: "adam-bilek"
+- id: "adam-bilek"
     name: "Adam Bílek"
     position: "Analytik"
     summary: "Vystudoval mezinárodní vztahy a energetickou bezpečnost společně s environmentálními studii. Ve Faktech o klimatu se věnuje energetice, dekarbonizaci průmyslu a technologiím zachytávání a ukládání uhlíku."
     img: "adam-bilek.jpg"
     email: "adam.bilek@faktaoklimatu.cz"
     linkedin: "https://www.linkedin.com/in/adam-b-1467861bb/"
+
+  - id: "hana-tesak-vrtala"
+    name: "Hana Tesák Vrtala"
+    position: "Podcasterka"
+    summary: "Věnuje se komunikaci vědy a pedagogickému vzdělávání budoucích učitelů přírodních věd. Ve Faktech o klimatu spoluvytváří podcast [2050](https://2050podcast.cz/)."
+    img: "hana-vrtalova.jpg"
+    email: "hana.vrtalova@faktaoklimatu.cz"
+    linkedin: "https://www.linkedin.com/in/hana-vrtalová/"
+    twitter: "https://twitter.com/HVrtalova"
 
   - id: "martin-ukrop"
     name: "Martin Ukrop"
@@ -102,14 +117,6 @@
     email: "martin.ukrop@faktaoklimatu.cz"
     linkedin: "https://www.linkedin.com/in/mukrop/"
     www: "https://research.redhat.com/blog/project_member/martin-ukrop/"
-
-  - id: "matej-grabovsky"
-    name: "Matěj Grabovský"
-    position: "Analytik a programátor"
-    summary: "Tvoří statistické modely a simulace procesů spjatých se změnami klimatu a transformací. Zpracovává a analyzuje data v širokém spektru oblastí. Jako softwarový inženýr pracuje na webových aplikacích a distribuovaných systémech."
-    img: "matej-grabovsky.jpg"
-    email: "matej.grabovsky@faktaoklimatu.cz"
-    www: "https://mgrabovsky.net/"
 
   - id: "tom-protivinsky"
     name: "Tom Protivínský"
@@ -143,10 +150,6 @@
   - id: "oldrich-sklenar"
     name: "Oldřich Sklenář"
     summary: "V projektu konzultuje ohledně energetiky. Na řadě infografik přímo spolupracoval."
-
-  - id: "andy-snovakova"
-    name: "Andy Snováková"
-    summary: "Přispívá k tématu uhlíku v půdě a jeho vztahu ke klimatické změně a pomáhá s vizualizací dat."
 
   - id: "eliska-soperova"
     name: "Eliška Soperová"
