Aktualizace Matějova medailonku

--- a/_data/organization-members.yml
+++ b/_data/organization-members.yml
@@ -71,7 +71,7 @@
   - id: "matej-grabovsky"
     name: "Matěj Grabovský"
     position: "Analytik a programátor"
-    summary: "Tvoří statistické modely a simulace procesů spjatých se změnami klimatu a transformací. Zpracovává a analyzuje data v širokém spektru oblastí. Jako softwarový inženýr pracuje na webových aplikacích a distribuovaných systémech."
+    summary: "Tvoří modely, zpracovává a analyzuje data v oblastech spjatých s transformací. Jako softwarový inženýr pracoval na webových aplikacích a distribuovaných systémech."
     img: "matej-grabovsky.jpg"
     email: "matej.grabovsky@faktaoklimatu.cz"
     www: "https://mgrabovsky.net/"
