--- a/_data/organization-members.yml
+++ b/_data/organization-members.yml
@@ -79,7 +79,7 @@
   - id: "andy-snovakova"
     name: "Andy Snováková"
     position: "Analytička"
-    summary: "Věnuje se tématu uhlíku v půdě a jeho vztahu ke klimatické změně a pomáhá s vizualizací dat. Vystudovala evoluční a ekologickou biochemii se zaměřením na botaniku a dále pokračuje v environmentálních studiích."
+    summary: "Věnuje se tématu uhlíku v půdě a jeho vztahu ke klimatické změně a pomáhá s vizualizací dat. Vystudovala evoluční a ekologickou biologii se zaměřením na botaniku a dále pokračuje v environmentálních studiích."
     img: "andy-snovakova.jpg"
     email: "alexandra.snovakova@faktaoklimatu.cz"
 
