Aktualizace sociálních sítí
- Aktualizace ikony Twitter → X.
- Aktualizace Instagramu na faktaoklimatu.
- Přidání odkazu na Threads.

Závisí na faktaoklimatu/web-core#247.

--- a/_config.local.yml
+++ b/_config.local.yml
@@ -9,7 +9,8 @@ github: faktaoklimatu/web-cz
 twitter: "faktaoklimatu"
 facebook: "faktaoklimatu"
 linkedin: "68480136"
-instagram: "2050_podcast"
+instagram: "faktaoklimatu"
+threads: "faktaoklimatu"
 youtube: "UCpW-nPyjH68BUfAjzhk7O_Q"
 newsletter: "9-54057be166928eb6fcc57504dc847797"
 fundraising: "https://www.darujme.cz/projekt/1203742"
