--- a/_data/lang.yml
+++ b/_data/lang.yml
@@ -105,7 +105,7 @@ sidebar:
     caption-dataset-2: "Původní data mají různé licence, detaily najdete v podrobném textu k datasetu."
     usage: "Jak správně použít?"
     button-facebook: "Sdílet na Facebooku"
-    button-twitter: "Sdílet na Twittru"
+    button-twitter: "Sdílet na X"
     button-embed: "Vložit na jinou stránku"
     modal-title: "Jak správně odkazovat faktaoklimatu.cz?"
   mobile:
