--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,7 +23,7 @@
 - title: O nás
   link: /o-nas
 
-- title: <i class="fab fa-fw fa-twitter"></i>
+- title: <i class="fab fa-fw fa-x-twitter"></i>
   link: https://twitter.com/faktaoklimatu
   class: no-ext-link-icon
 
