Přidání odkazu na LI ke Karolíně

--- a/_data/organization-members.yml
+++ b/_data/organization-members.yml
@@ -176,6 +176,7 @@
   - id: "karolina-stollova"
     name: "Karolína Štollová"
     summary: "Zpracovala analýzy týkající se energetiky, například energetické soběstačnosti, obnovitelných zdrojů nebo cenové stability."
+    linkedin: "https://www.linkedin.com/in/karol%C3%ADna-%C5%A1tollov%C3%A1-61b4a01a0"
 
   - name: "Eliška Vlčková"
     summary: "Spolupracovala na řadě materiálů týkajících se krajiny, biodiverzity či ochrany životního prostředí. Zpracovává prostorová data a tvoří kartografické výstupy."
