Medailonek Andy + drobné aktualizace

--- a/_data/organization-members.yml
+++ b/_data/organization-members.yml
@@ -96,7 +96,7 @@
   - id: "andy-snovakova"
     name: "Andy Snováková"
     position: "Analytička"
-    summary: "Věnuje se tématu uhlíku v půdě a jeho vztahu ke klimatické změně a pomáhá s vizualizací dat. Vystudovala evoluční a ekologickou biologii se zaměřením na botaniku a dále pokračuje v environmentálních studiích."
+    summary: "Věnuje se tématu krajiny a jejímu vztahu ke změně klimatu. Vystudovala evoluční a ekologickou biologii se zaměřením na botaniku a environmentální studia."
     img: "andy-snovakova.jpg"
     email: "alexandra.snovakova@faktaoklimatu.cz"
 
@@ -171,7 +171,7 @@
 
   - id: "kristyna-simonova"
     name: "Kristýna Šimonová"
-    summary: "Spolupracuje na materiálech týkajících se globálních úmluv v oblasti biodiverzity a zabývá se klimatickými ambicemi států východní Asie."
+    summary: "Spolupracujovala na materiálech týkajících se globálních úmluv v oblasti biodiverzity."
 
   - id: "karolina-stollova"
     name: "Karolína Štollová"
@@ -183,9 +183,9 @@
     linkedin: "https://www.linkedin.com/in/eliška-vlčková-080a4082/"
 
   - name: "Martin crysman Zahradník"
-    summary: "V projektu od jeho počátku pomáhá s tím, co je potřeba (korektury, opravy, drobné programování)."
+    summary: "V projektu na jeho počátku pomáhal s tím, co bylo potřeba (korektury, opravy, drobné programování)."
 
   - id: "jakub-zamouril"
     name: "Jakub Zamouřil"
-    summary: "Přispívá analytickou prací a psaním textů v tématech fyziky změny klimatu a energetiky. Je redaktorem magazínu [Czechsight](https://www.czechsight.cz)."
+    summary: "Přispěl analytickou prací a psaním textů v tématech fyziky změny klimatu a energetiky."
     linkedin: "https://www.linkedin.com/in/jakub-zamouril/"
