--- a/_data/organization-members.yml
+++ b/_data/organization-members.yml
@@ -137,9 +137,9 @@
     linkedin: "https://www.linkedin.com/in/tomas-protivinsky-49599040"
     twitter: "https://twitter.com/protivinsky"
 
-- title: "Faktům o klimatu dále pomáhají"
+- title: "Faktům o klimatu dále pomáhají a pomáhali"
   lead: |
-    Další lidé pomáhají konzultačně, rešeršemi, psaním textů nebo programováním webu.
+    Další lidé přispívají nebo přispěli konzultačně, rešeršemi, psaním textů nebo programováním webu.
   class: "further-team col-12 col-sm-12 col-md-4 col-lg-3 px-0"
   members:
   - id: "adam-bilek"
@@ -155,7 +155,7 @@
     summary: "Přispívá k tématu energetiky, zejména k otázkám její dlouhodobé transformace."
 
   - name: "Martin Křivánek"
-    summary: "Přemýšlí, jak může mít práce Fakt o klimatu co největší dopad a jak co nejvíce zhodnotit existující infografiky a materiály."
+    summary: "Podílel se na textech webu, přispíval nápady a připomínkoval infografiky a články."
     linkedin: "https://www.linkedin.com/in/martin-krivanek/"
 
   - name: "Jan Růžička"
